# AmnesiaTheDarkDescent

./: .gitignore  README.md
.deprecated/dependencies/ol_api/deprecated/: OLOverlay_1_65.h  OLService_1_134.h
.deprecated/dependencies/precompiled/include/ol_api/deprecated/: OLMedia_1_170.h  OLUser_1_093.h  olvoice_1_119.h  olvoice_1_151.h  olvoice_1_165.h  olvoice_1_169.h
HPL2/core/: CMakeLists.txt
HPL2/core/cmake/: BoilerPlate.cmake  UtilityFunctions.cmake
HPL2/core/include/: CommunityEdition.h  Versioning.h
HPL2/core/include/graphics/: Renderer.h
HPL2/core/include/gui/: GuiGfxElement.h  GuiSet.h  GuiTypes.h  WidgetFrame.h
HPL2/core/include/system/: LowLevelSystem.h  Script.h
HPL2/core/sources/: Versioning.cpp
HPL2/core/sources/graphics/: Graphics.cpp
HPL2/core/sources/gui/: GuiPopUpColorPicker.cpp  GuiPopUpMessageBox.cpp  GuiSet.cpp  WidgetMenuItem.cpp
HPL2/core/sources/impl/: GamepadSDL2.cpp  LowLevelInputSDL.cpp  LowLevelResourcesSDL.cpp  LowLevelSystemSDL.cpp  PhysicsBodyNewton.cpp  PhysicsWorldNewton.cpp  PlatformWin32.cpp  SDLEngineSetup.cpp
HPL2/core/sources/resources/: BinaryBuffer.cpp
HPL2/core/sources/system/: SerializeClass.cpp
HPL2/dependencies/OALWrapper/: CMakeLists.txt
HPL2/tools/: CMakeLists.txt
HPL2/tools/editors/: CMakeLists.txt
HPL2/tools/editors/common/: Editor.cpp  EditorBaseClasses.cpp  EditorBaseClasses.h  EditorInput.cpp  EditorWindowEditModeSidebar.cpp  EditorWindowLowerToolbar.cpp  EditorWindowMaterialEditor.cpp  EditorWindowSelect.cpp  EditorWindowSelect.h  SurfacePicker.h
HPL2/tools/editors/leveleditor/: LevelEditor.cpp  LevelEditor.rc  LevelEditorMain.cpp  LevelEditorWindowAbout.cpp  LevelEditorWindowAbout.h  LevelEditorWorld.cpp
HPL2/tools/editors/materialeditor/: MaterialEditor.cpp  MaterialEditor.rc  MaterialEditorMain.cpp
HPL2/tools/editors/modeleditor/: ModelEditor.cpp  ModelEditor.rc  ModelEditorMain.cpp
HPL2/tools/editors/particleeditor/: ParticleEditor.cpp  ParticleEditor.rc  ParticleEditorMain.cpp
HPL2/tools/mapview/: MapView.cpp
HPL2/tools/modelview/: ModelView.cpp
HPL2/tools/mshconverter/: MshConverter.cpp
HPL2/tools/particleview/: ParticleView.cpp
HPL2/tools/texconverter/: TexHelpers.cpp
amnesia/src/: CMakeLists.txt  XCompileToWindows.toolchain
amnesia/src/game/: CMakeLists.txt  LuxBase.cpp  LuxEffectHandler.cpp  LuxEffectHandler.h  LuxMap.cpp  LuxMapHandler.cpp
amnesia/src/launcher/: CMakeLists.txt  Main.cpp
amnesia/src/launcher-macosx/: CMakeLists.txt
dependencies/AngelScript/: CMakeLists.txt
dependencies/AngelScript/include/: angelscript.h
dependencies/OALWrapper/: CMakeLists.txt
dependencies/precompiled/include/fbxfilesdk/components/libxml2-2.6.4/include/libxml/: config.h
dependencies/precompiled/lib/linux/lib64/: libopenal.so.1
dependencies/precompiled/lib/win32/: fltk.lib  fltkforms.lib  fltkgl.lib  fltkimages.lib  fltkjpeg.lib  fltkpng.lib
dependencies/zlib/: CMakeLists.txt
editor-release-files/: NewShortcuts.txt  README-community-tools.txt  README.txt  gui-original-light-theme.rar
editor-release-files/editor/gui/: editmode_select_rotate.tga
editor-release-files/editor/models/: editor_rect.msh  editor_water_plane.msh  mateditor_cube.msh  mateditor_cylinder.msh  mateditor_plane.msh  mateditor_sphere.msh
editor-release-files/gui/default/: gui_def_button_down_corner_ld.tga  gui_def_button_down_corner_lu.tga  gui_def_button_down_corner_rd.tga  gui_def_button_down_corner_ru.tga  gui_def_button_up_border_d.tga  gui_def_button_up_border_l.tga  gui_def_button_up_border_r.tga  gui_def_button_up_border_u.tga  gui_def_button_up_corner_ld.tga  gui_def_button_up_corner_lu.tga  gui_def_button_up_corner_rd.tga  gui_def_button_up_corner_ru.tga  gui_def_checkbox_checked.tga  gui_def_checkbox_unchecked.tga  gui_def_colorpicker_bgpattern.tga  gui_def_colorpicker_pointer.tga  gui_def_colorpicker_pointer_slider.tga  gui_def_filepicker_icon_folder.tga  gui_def_filepicker_icon_graphics.tga  gui_def_filepicker_icon_models.tga  gui_def_filepicker_icon_rest.tga  gui_def_filepicker_icon_sounds.tga  gui_def_filepicker_icon_text.tga  gui_def_filepicker_upbutton.tga  gui_def_frame_border_d.tga  gui_def_frame_border_r.tga  gui_def_frame_corner_lu.tga  gui_def_group_corner_rd.tga  gui_def_menu_arrow.tga  gui_def_menu_checked.tga  gui_def_pointer_normal.tga  gui_def_pointer_text.tga  gui_def_pointer_zoom.tga  gui_def_slider_hori_arrow_d.tga  gui_def_slider_hori_arrow_u.tga  gui_def_slider_vert_arrow_d.tga  gui_def_slider_vert_arrow_u.tga  gui_def_tab_border_d.tga  gui_def_tab_border_l.tga  gui_def_tab_border_u.tga  (+16 more)
editor-release-files/viewer/: modelview_rect.msh
